Fix Header Image Styles on Mobile

--- a/src/css/components/header/header.css
+++ b/src/css/components/header/header.css
@@ -18,6 +18,8 @@
 
 .Header-logo {
     max-width: 480px;
+    object-fit: cover;
+    width: 100%;
 }
 
 .Header-line {
